--- a/README
+++ b/README
@@ -30,6 +30,11 @@ implementation since it follows Delwink's standards and development styles.
 Build
 -----
 
+You'll need a C compiler, the GNU Autotools, and libtool. On Debian-based
+systems, you can get these with:
+
+    # apt-get install build-essential automake autoconf libtool
+
 libpfxtree uses the GNU build process. You can compile it with the following
 steps:
 
