Change license to COIL 0.5

--- a/README
+++ b/README
@@ -57,9 +57,9 @@ request system.
 License
 -------
 
-libpfxtree is free software, released under the terms of version 3 of the GNU
-Affero General Public License. You are free to copy, modify, and redistribute
-this software and use it for whatever purpose. See [COPYING](COPYING) for more
-details.
+libpfxtree is free software, released under the terms of version 0.5 of the
+Copyfree Open Innovation License. You are free to copy, modify, and
+redistribute this software and use it for whatever purpose. See
+[COPYING](COPYING) for more details.
 
 [1]: mailto:contribute@delwink.com
